--- a/MvcPaging.Demo/packages.config
+++ b/MvcPaging.Demo/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="jQuery" version="2.1.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
@@ -10,4 +11,7 @@
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
   <package id="NUnitTestAdapter" version="1.0" targetFramework="net40" />
   <package id="SyntaxHighlighter" version="3.0.83" targetFramework="net40" />
+  <package id="Unity" version="4.0.1" targetFramework="net452" />
+  <package id="Unity.Mvc" version="4.0.1" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
 </packages>
