--- a/Lexicon.DAL/Lexicon.DAL.csproj
+++ b/Lexicon.DAL/Lexicon.DAL.csproj
@@ -41,6 +41,14 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -51,11 +59,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EF\ApplicationContext.cs" />
     <Compile Include="EF\LexiconDBContext.cs" />
+    <Compile Include="Entities\AuthentificationEntities\ApplicationUser.cs" />
+    <Compile Include="Entities\AuthentificationEntities\ApplicationRole.cs" />
+    <Compile Include="Entities\AuthentificationEntities\ApplicationUserManager.cs" />
+    <Compile Include="Entities\AuthentificationEntities\ApplicationRoleManager.cs" />
+    <Compile Include="Entities\AuthentificationEntities\ClientProfile.cs" />
     <Compile Include="Entities\CorpusTexts.cs" />
+    <Compile Include="Interfaces\AuthentificationInterFaces\IClientManager.cs" />
+    <Compile Include="Interfaces\AuthentificationInterFaces\IUnitOfWork.cs" />
     <Compile Include="Interfaces\IContentRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ClientManager.cs" />
     <Compile Include="Repositories\ContentRepository.cs" />
+    <Compile Include="Repositories\IdentityUnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
